# swaybg

./: .build.yml  README.md  background-image.c  cairo.c  dir.c  dir_sel.c  dir_sel.h  log.c  main.c  meson.build  meson_options.txt  pool-buffer.c  swaybg.1.scd
dir_test/: Makefile  test.c
include/: background-image.h  cairo_util.h  log.h  pool-buffer.h
