option('gdk-pixbuf', type: 'feature', value: 'auto', description: 'Enable support for more image formats')
option('rsvg', type: 'feature', value: 'auto', description: 'Enable support for directly rendering SVG images')
option('man-pages', type: 'feature', value: 'auto', description: 'Generate and install man pages')
